--- a/_i18n/en/_posts/2020-08-10-數位民主-創新服務.md
+++ b/_i18n/en/_posts/2020-08-10-數位民主-創新服務.md
@@ -1,45 +1,45 @@
 ---
   layout: "post"
   title: "Digital democracy, innovative services"
-  excerpt: "When the government can do it and the people can accept it, digital services will be realized bit by bit."
+  excerpt: "From this we can see that situation of “a miller, his son, and their donkey” is not necessarily unsolvable."
   image: "https://talk.pdis.nat.gov.tw/uploads/default/optimized/2X/9/9237edad0303f40cdbe55c577d65505ebc7e3061_2_1380x920.jpeg"
-  author: "唐鳳"
+  author: "Audrey Tang"
   category: "blog"
   tags: 
-    - "開放政府"
+    - "Open Government"
 ---
 
 
-🤖 In many speeches, a question is often asked: "Will AI replace human work?"
+🤖 A question that I was frequently asked during my talks is, "will AI take jobs away from humans?"
 
-🚸 AI to me is "Assistive Intelligence", which is to assist humans wisdom. What AI replaces is what we are not suitable to do or do not want to do, so that humans can engage in more creative work and obtain spiritual satisfaction. 
+🚸 To me, AI means "Assistive Intelligence." In other words, it supplements human intelligence. AI will replace works that we are not suitable for or are not interested in, so that humans can be engaged in more creative works and derive a satisfaction of the mind.
 
-🚵 We develop technology to meet the needs of everyone. Even if there are things that are both regular and better with machines, as long as people can get a sense of accomplishment and fun from them, of course they will not be replaced by machines. For example, friends who love outdoor activities will definitely not let machines run and climb mountains instead of us, even if machines run faster and climb higher. 
+🚵 We develop technology to meet the needs of people. Even if there are activities that are both regular and better done by machines, as long as people can get a sense of accomplishment and fun from them, of course they will not be replaced by machines. For example, those of us who love outdoor activities will definitely not let machines do the running and climbing for us, even if machines run faster and climb higher.
 
-📖 "Technology always comes from human nature", the space for public digital innovation also comes from human nature. How to strike a balance and dialogue between human nature and technology? This is a subject that TEG (Electronic Governance Research Center) has cultivated for many years. In the "[Digital Transformation of Government](https://www.wunan.com.tw/bookdetail?no=14943)" this must-read introductory book, Provide a complete and systematic response. 
+📖 "Technology always comes from human nature", and the space for public digital innovation also comes from human nature. How to strike a balance and find a dialogue between human nature and technology? This is a topic that TEG (Taiwan E-Governance Research Center) has focused on for many years. In "Digital Transformation of Government" (https://www.wunan.com.tw/bookdetail?NO=14943), an essential introductory book, a complete and systematic response has been offered.
 
-🔖 I think that this book uses "Digital Democracy" as the leading chapter, which is indeed insightful and probing, because the core concept of "digital transformation" contained in the current "service-oriented smart government" is precisely here. . 
+🔖 I think that placing "e-Democracy" as the first chapter of this book is indeed insightful and astute, because it is precisely the core concept of "digital transformation" contained in the current "service oriented smart government".
 
-🔔 Before 2016, the "Electronic Government Project" at various stages still focused on "how the government optimizes services" when constructing information and communication equipment and developing innovative governance. In the brand new stage starting in 2017, the core concepts of “data governance, open collaboration, and citizen participation” have been highlighted for the first time in order to create a cross-departmental and diverse collaboration environment. So far, digital services not only come from human nature, but also from the concrete practice of democracy. 
+🔔 Prior to 2016, the various phases of "e-Government Program" still centered around "how the government optimizes services" when establishing information and communication systems and developing innovative governance. In the new phase starting in 2017, the core concepts of “data governance, open collaboration, and citizen participation” were promoted for the first time, with commitments to create a multilateral collaboration environment across government agencies. By then, digital services not only come from human nature, but also stem from the concrete practice of democracy.
 
-🗽 The meaning of "digital democracy" not only uses tools such as social media, online signatures, and electronic voting to reflect public opinion and exercise civil rights; it also lies in the digital services provided by the government, from development to deployment. Take democracy as the prerequisite. In other words, government digital services must be "citizen-centered," that is, "open the door to build a car," and find the people to design together. 
+🗽 The meaning of "e-Democracy" is not just the use of tools such as social media, online petition, and electronic voting to reflect public opinion and exercise civil rights; it also lies in the premise of making democracy the prerequisite of government's digital services from development to deployment. In other words, the government's digital services must be "citizen-centric," which means "building a car behind an open door," and engaging the people in the design.
 
-🌁 However, in this age of "one person with one trumpet, each with his own tune", digital services must emphasize democracy. Isn't it too idealistic? And the public opinion is like water, where to find a consensus, will it not fall into the predicament of father and son riding a donkey? 
+🌁 However, in this age of "each person trumpeting to their own tune", would it be too idealistic to emphasize democracy in  digital services? As the public opinion is fluid, how can a consensus be reach without the predicament of "a miller, his son, and their donkey"?
 
-🌼 The meaning of democracy, of course, does not mean that everything has to be voted on. It can only seek common ground, not differences. The important thing is to create a space for co-creation through dialogue, so that even if the stakeholders of all parties have different goals, they can do something together. Although the result is not to everyone's satisfaction, everyone can live it well. 
+🌼 The meaning of democracy, of course, does not mean that everything has to be voted on and we must seek common ground without accommodating differences. The important thing is to create a room for joint efforts through dialogues, so that even if the various stakeholders have different goals, they can work together. Although the result is not to everyone's satisfaction, everyone can accept.
 
-⛰️ For example, there are hundreds of mountain climbers, and their needs are also various, but for the "[Taiwan Mountaineering Application One-stop Service Network](https://hike.taiwan. gov.tw/)", during the discussion of "Salute to the Mountain" in 2019, everyone agreed: three agencies and four different online application systems. It is too troublesome to register separately once you climb the mountain. 
+⛰️ For example, there are many kinds of mountaineering enthusiasts, and their needs also vary, but for the "Hike Smart Taiwan Service" (https://hike.taiwan.gov.tw/) mentioned in the book, during the discussion for the 2019 "Salute to the Mountains", there was a consensus that it was too cumbersome to register with three agencies and four different online application systems for each climb.
 
-🙋 The solution is not to knock down and retrain. Different agencies have their own duties and management purposes. Therefore, under the premise of uninterrupted existing services, PDIS (Public Digital Innovation Space Group of the Executive Yuan), colleagues from relevant authorities, and several young people who are interested in improving the design of government websites My friend, adopted the method of "consistent front-end and integrated back-end" to create a new digital service. And friends who have expressed different opinions in the collaboration meeting are logically the best candidates to participate in the preliminary use test. 
+🙋 The solution was not to start from scratch. Different agencies have their own duties and management purposes. Therefore, under the premise of not interrupting existing services, PDIS (Public Digital Innovation Space), along with colleagues from relevant authorities and several young people who were interested in improving the design of government websites, adopted the approach of "consistent front end and integrated back end" to create a new digital service. Those who had expressed various opinions in the collaborative meetings naturally became the best candidates to participate in the preliminary user test.
 
-🌄 It can be seen that "father and son riding a donkey" is not necessarily unsolvable. If all parties have common values, that is, "the most important thing is to complete the journey safely," then it is not necessary to take turns to ride the donkey. Maybe there are passers-by who are willing to provide shared rides and free rides. The point is that "democracy" is not the pursuit of a single solution that everyone must agree to. Rather than wanting a rough consensus, it is better to have a rough consensus, so that everyone can go on together. Rather than the government "being the king and the teacher" and insisting everyone accept the so-called advanced technology, it is better to find out what is lacking now? When the government can do it and the people can accept it, digital services will be realized bit by bit. 
+🌄 From this we can see that situation of "a miller, his son, and their donkey" is not necessarily unsolvable. If all parties have common values, that is, "the most important thing is to complete the journey safely," then there is no definitive way to take turns riding the donkey. Maybe there are passersby who are willing to provide shared rides or free rides. The point is that "democracy" is not the pursuit of a single solution that everyone must agree to. Rather than wanting a brusque consensus, it is better to have a rough consensus for everyone to proceed. Rather than the government "being the king and the teacher" and insisting everyone accept the so called advanced technology, it is better to find out what is lacking currently. Under the premise of what the government can do and what the people can accept, digital services can be realized bit by bit.
 
-🌱 I am often asked by my business colleagues, will it be inefficient? Based on my experience working in Silicon Valley, the first step in building an ecosystem is to admit that I am not a panacea. This is especially important for public services: the so-called "cooperation" does not mean that everything is government-led. If there are more suitable social innovation organizations, why not let them do it? The government only needs to fully support it. 
+🌱 Often I have also been asked by my colleagues in public services, will this be rather inefficient? Based on my experiences working in Silicon Valley, the first step in building an ecosystem is to admit that we are not omnipotent. This is especially important for public services - "collaboration" does not mean that everything should be led by the government. If there are more suitable social innovation organizations, why not let them do it? All that the government should do is to fully support them.
 
-🗺️ For example, the "Mask Real-Name System" in early 2020. With the assistance of a pharmacist, a health insurance card is used to purchase masks. What people want to know most is "Where are the health insurance pharmacies? How many masks are there?" Colleagues of the department adopted the strategy of "opening doors and making cars", publishing the stock of masks on the government's open information platform, and contacting friends who originally wrote the "supermarket mask map" to collaborate on development. 
+🗺️ For example, in the “Mask Rationing System” at the beginning of 2020, with the help of pharmacists, a fixed quantity of masks can be purchased per National Health Insurance card. What people want to know most is “Where are the National Health Insurance pharmacies? How many masks do they have left?" Therefore, our colleagues at the National Health Insurance Agency adopted the strategy of "building a car behind an open door" and published the quantities of mask inventory on the government's open information platform. Furthermore, they contacted the people who originally wrote the "supermarket mask map" for joint development.
 
-📈 Thanks to the contributions of the g0v (zero-time government) community partners, within 72 hours, there have been a variety of applications such as maps and chatbots. The policy has been on the road for a week, and the "mask supply and demand information platform" has hundreds of applications of all kinds, which is definitely much more efficient than the past "closed door". 
+📈 Thanks to the contributions of the g0v (gov zero) community partners, within 72 hours, there were already a variety of apps such as maps and chatbots. A week after the policy was rolled out, there were hundreds of applications of all kinds on the "HackMD", which is definitely much more efficient than the past way of "building a car behind a closed door".
 
-🌐 It can be seen that digital government services can not only evolve from "for the people" to "with the people", but can also achieve the ideal of "after the people"-this is exactly what I served as a digital executive in the Executive Yuan. The original intention of the political commissar: to promote citizen participation and increase social innovation. 
+🌐 It can be seen from this that digital government services can not only evolve from "for the people" to "with the people", but also achieve the ideal of "after the people". This is exactly my original intention of serving as a digital political commissar in the Executive Yuan - to promote citizen participation and increase social innovation.
 
-💡 Here, I hope that all readers of "The Digital Transformation of Government" can give full play to the social innovation spirit of "Everyone's business, and all help", and work together to practice digital democracy. It is for the order. 
+💡 I hereby hope that all readers of "Digital Transformation of Government" can give full play to the social creative spirit of "everybody's business and everybody's contribution", and work together to practice digital democracy. It is my pleasure to write this foreword.
