--- a/_i18n/zh-TW/_posts/2020-08-10-數位民主-創新服務.md
+++ b/_i18n/zh-TW/_posts/2020-08-10-數位民主-創新服務.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: 數位民主，創新服務
-excerpt: 在政府做得到、人民能接受之下，一點一滴讓數位服務實現。
+excerpt: 由此可知，「父子騎驢」也不一定無解。
 image: https://talk.pdis.nat.gov.tw/uploads/default/optimized/2X/9/9237edad0303f40cdbe55c577d65505ebc7e3061_2_1380x920.jpeg
 author: 唐鳳
 category: blog
