* add .jpg suffix and resize

--- a/_i18n/en/_posts/project/2017-05-31-emic.md
+++ b/_i18n/en/_posts/project/2017-05-31-emic.md
@@ -2,7 +2,7 @@
   layout: "post"
   title: "Create a disaster prevention information system that will not crash when disaster strikes"
   excerpt: "Combined with the two-stage data of disaster prevention and relief, a single information inquiry portal is established; the system architecture is changed, the minimum resource operation is used in peacetime, and it can be automatically expanded during the temporary disaster period, and the data of large explosion volume is inquired."
-  image: "/assets/imgs/photo-1454789476662-53eb23ba5907"
+  image: "/assets/imgs/photo-1454789476662-53eb23ba5907.jpg"
   author: "Mark"
   category: "project"
 ---
