--- a/_posts/project/2017-05-31-emic.md
+++ b/_posts/project/2017-05-31-emic.md
@@ -2,7 +2,7 @@
 layout: post
 title: 打造災時不會當機的防災資訊系統
 excerpt: 結合防災救災兩階段的資料，建立單一資訊查詢入口；改變系統架構，在平時使用最低資源運作，又可以在災害來臨時期自動擴充，因應大爆量的資料查詢。
-image: /assets/imgs/photo-1454789476662-53eb23ba5907
+image: /assets/imgs/photo-1454789476662-53eb23ba5907.jpg
 author: Mark
 category: project
 ---
