--- a/_i18n/en/_posts/2020-08-27-線上奉茶App-環保新解方.md
+++ b/_i18n/en/_posts/2020-08-27-線上奉茶App-環保新解方.md
@@ -1,36 +1,34 @@
 ---
   layout: "post"
-  title: "Shang and Zhou Column: New Solutions for Environmental Protection in Online Tea Service App"
-  excerpt: "How can we break the habit of \"buying water and drinking\"? Huang Weicheng remembered the tradition of serving tea."
+  title: "Tea-serving app provides novel environmental solution"
+  excerpt: "How to get rid of bottle-buying habit? Huang recalls the tradition of serving tea
   image: "/assets/imgs/70097820e41b16a33f51ddb6ffcee41b4ed5e75c.jpeg"
-  author: "唐鳳、彭筱婷"
+  author: "Audrey Tang, Sheau-Tyng Peng"
   category: "blog"
   tags: 
-    - "社會創新"
+    - "Social Innovation"
 ---
 
+☀️ This summer's record-breaking high temperatures have made it a daily routine for many people to buy drinks to quench their thirst. According to statistics, however, Taiwan produces up to 1 billion bottles of water a year, which by connecting can circle the Earth 5.7 times. Even though the recycling rate in Taiwan reaches 95%, 5% of the bottles that are not recycled will still cause serious environmental pollution.
 
-☀️ High temperatures have been repeated this summer, and buying drinks to quench their thirst has become a daily routine for many people. However, according to statistics, Taiwan produces as much as 1 billion bottles of bottled water each year, and the length of the bottled water together can circle the earth 5.7 times. Even though the recycling rate of Taiwan PET bottles is as high as 95%, the unrecycled 5% will still cause serious environmental pollution. 
+♻️ In this year's President Hackathon, an outstanding team named "CircuPlus Tea-Serving Operation" combined tea serving culture and mass participation and put forward an action plan for plastic reduction that impressed me deeply.
 
-♻️ Among the final selection team of this year's Presidential Cup Hackathon, the "CircuPlus Action for Tea" team combined the culture of serving tea and the participation of the masses, and proposed a plastic reduction action plan that impressed me. 
+🍵 Initiator of the Team, Weicheng Huang, said he witnessed endless plastic bottles when he participated in a beach-cleaning activity a few years ago, causing him to reflect deeply on how to get rid of bottle-buying habit. Huang recalls the tradition of serving tea. Free tea can be seen in temples and roadside, which is a manifestation of Taiwan's human touch.
 
-🍵 The founder of the team Huang Weicheng said that when he joined the beach cleaning operation a few years ago, seeing the endless plastic bottles on the beach, he couldn't help but start thinking: How can we break the habit of "buying water and drinking"? Huang Weicheng remembered the tradition of serving tea. Free tea can be seen in temples and on the roadside, which is a demonstration of the Taiwanese taste. 
+📲 Huang and his friends decided to develop an "Water Refill Map" app for locating drinking points in Taiwan. If one doesn't have to buy water to relieve thirst, people with environmental ideas will be willing to join in. However, at the beginning of the implementation, due to the lack of staff, they could not map out location data of all drinking spots. Meantime, in the context of the epidemic this year, many water stations have been suspended, which made the data collection inaccurate and the promotion not reaching expectation for a certain period.
 
-📲 Huang Weicheng and his friends decided to develop the "Fengcha" App to build a drinking water map across Taiwan. If you can quench your thirst without buying water, people with environmental protection concepts must be willing to join. However, in the initial stage of the implementation, due to insufficient team manpower, it was not possible to fully collect information on drinking water stations. In addition to the epidemic this year, many drinking water stations were temporarily suspended, which made the data collection inaccurate and the promotion was once not as expected. 
+🎉 The team signed up for the Presidential Hackathon in February this year, and the problem was then solved.
 
-🎉 The Fengcha team signed up for the President's Cup Hackathon in February this year, and the problem was solved. 
+🗂 Thanks to the Presidential Hackathon platform, the Water Refill Map team began collaborating with the Environmental Protection Agency. In the spirit of open access to information, the Agency immediately coordinated environmental protection bureaus in various counties and cities to collect data of all drinking water stations, thus enabling the tea-serving team to take the first step.
 
-🗂 Through the President's Cup hackathon, the Fengcha team and the Environmental Protection Agency are connected and collaborative. Adhering to the government's spirit of opening up information, the Environmental Protection Agency immediately coordinated with the environmental protection bureaus of counties and cities to collect complete information on drinking water stations in various places, and the Fengcha team took the first step. 
+📝 Apart from the existing documentation on drinking water stations, the team also initiated multilateral cooperation through the wisdom of the local population, inviting enterprises, friendly shops and general public to share information on drinking water stations; Whenever users see a new drinking station, they can voluntarily add "refreshments", or rate and add instructions after using a drinking station.
 
-📝 In addition to the existing drinking water station information, the team also started multilateral cooperation through the wisdom of the people, inviting companies, friendly stores and the general public to share drinking water station information; users can spontaneously see a new drinking station anywhere. Add "Bong Refreshment" to, or after using a certain drinking point, score and add instructions. 
+🎁 In addition, the Water Refill Map offers various tasks, such as drinking water for one gold coin per day, or going to a tea shop in Dadaocheng business cluster to get 50 gold coins. Rewards of these task can be redeemed for free at shops in partnership.
 
-🎁 In addition, "Fengcha" has different mission levels, such as drinking water every day to get 1 gold coin, or going to Dadaocheng business district to find a Fengcha shop to get 50 gold coins. These task rewards can be redeemed for free goods at partner stores. 
+🚀 Through providing games and giving feedback to users, it becomes easier to increase their willingness to use the App, which makes data more accurate. Since its launch half a year ago, "Tea Serving" has accumulated more than 6,000 water access points and 20,000 downloads, and was recently selected as the  Presidential Hackathon Outstanding Team of the year.
 
-🚀 Through the game and giving feedback to users, we successfully increased the willingness to use, and the participants also made the data more accurate. Since its launch for half a year, "Fengcha" has accumulated more than 6,000 water receiving points and 20,000 downloads. It has also been selected as the annual outstanding team of the President's Cup Hackathon. 
+🏆 In my opinion, we can attribute the success of the Water Refill Map campaign to thoughtful public-private partnership. The Environmental Protection Agency as public sector, companies and App users as the private sector and all stakeholders in the society work together to help the enterprising team implement innovative environmental action plans.
 
-🏆 In my opinion, the results of the tea service are based on meticulous public-private collaboration. The public sector has the Environmental Protection Agency, the private sector has business circle companies, App users, and all stakeholders in the society are connected to help start-up teams implement innovative environmental action plans. 
+🌊 In addition to the tea serving supervised from the root, another team participating in Presidential Hackathon is working on improving the end-of-waste problem. The "Beyond Sea and Sky" Team, initiated by the Ocean Council, uses a distributed account book to record the process of marine waste cleaning, recycling, factory processing and returning to the hands of consumers. It can not only find the marine waste hot spots, but also ensure the proper use of materials, fully demonstrating the spirit of "salute to the sea".
 
-🌊 In addition to the re-control of the tea service, another team of the President’s Cup Hackathon is dedicated to improving the end-of-life waste problem. The "Broad Sea and Sky Team" initiated by the Ocean Commission uses distributed ledgers to record the process of marine waste from volunteer cleaning, recycling, factory processing, and returning to consumers. It can not only grasp the hot spots of marine waste, but also Ensure proper use of materials and fully reflect the spirit of "Salute to the Sea". 
-
-💧 The combination of digital technology and social innovation allows the trickle energy that was originally dispersed throughout the society to flow together, allowing sustainable thinking and daily life to have the most "water" connection. 
-
+💧 The combination of digital technology and social innovation has brought together energy that was once scattered throughout society, making sustainable thinking and daily life mostly connected to our waters.
