--- a/_i18n/en/_posts/2020-08-27-線上奉茶App-環保新解方.md
+++ b/_i18n/en/_posts/2020-08-27-線上奉茶App-環保新解方.md
@@ -1,7 +1,7 @@
 ---
   layout: "post"
   title: "Tea-serving app provides novel environmental solution"
-  excerpt: "How to get rid of bottle-buying habit? Huang recalls the tradition of serving tea
+  excerpt: "How to get rid of bottle-buying habit? Huang recalls the tradition of serving tea"
   image: "/assets/imgs/70097820e41b16a33f51ddb6ffcee41b4ed5e75c.jpeg"
   author: "Audrey Tang, Sheau-Tyng Peng"
   category: "blog"
