Update layout for `有精神`

--- a/_posts/2020-09-21-「有精神」的協作會議.md
+++ b/_posts/2020-09-21-「有精神」的協作會議.md
@@ -30,7 +30,10 @@ tags:
 ## 背景介紹
 故宮長期致力於博物館文化平權。從108年起與慈芳關懷中心合作，將文物帶入關懷中心與精神障礙會員共賞共創，109年更進一步策劃「有精神」展覽，展覽中涵括故宮文物，藝術家，精神障礙者相關於精神障礙議題的創作與詮釋。<a href="https://sayit.pdis.nat.gov.tw/2020-03-02-109%E5%B9%B43%E6%9C%88%E9%96%8B%E6%94%BE%E6%94%BF%E5%BA%9C%E8%81%AF%E7%B5%A1%E4%BA%BA%E5%B7%A5%E4%BD%9C%E6%8E%A8%E5%8B%95%E6%9C%83%E8%AD%B0#s379433" target="_blank">政府聯絡人逸文於109年3月將本議題自提至開放政府聯絡人月會</a>。計畫與行政院公共數位創新空間（PDIS）合作召開協作會議。希望籌備過程涵融多方意見，讓大眾能對「有精神展」及相關議題有更清晰的了解。透過開放透明的會議機制與互動式的工作坊，讓更多關心這個議題的人，也能用另一種方式參與討論，表達看法。
 
-<figure><img alt="image" src="/assets/imgs/f4410942538007e7cbad253765036cf1.jpg" /><img alt="image" src="/assets/imgs/5935e8f8de18fb3ee89e39558023db7f.jpg" /><figcaption>故宮運用不同媒材與主題，帶領著慈芳會員認識文物，抒發創作。</figcaption></figure>
+<figure>
+<img alt="image" src="/assets/imgs/f4410942538007e7cbad253765036cf1.jpg" width="50%" />
+<img alt="image" src="/assets/imgs/5935e8f8de18fb3ee89e39558023db7f.jpg" width="50%" />
+<figcaption>故宮運用不同媒材與主題，帶領著慈芳會員認識文物，抒發創作。</figcaption></figure>
  
  
 ## 盤點「多元利害關係人」並「深度訪談」作為釐清議題的第一步
@@ -42,7 +45,10 @@ tags:
 ## 「創作」作為協作會議的一個主軸
 從深度訪談中釐清的主軸：「以障者為本」的思考與設計，讓我們重新思考協作會議在這樣場合中的角色與定位。最後我們決定帶入故宮在慈芳已經實行一年多的藝術共創工作坊，用文物作為媒介，讓與會者用共創的方式來說自己的故事。一來，我們用慈芳夥伴們不會太陌生的方法來熟悉會議中的與會者。我們也相信，創作也是一種促進溝通的方法，希望用藝術創作來開啟原本對立或不熟悉的對話。這個環節也再次呼應「有精神展」中，精神障礙朋友們，用藝術表達自己的人生故事。精神障礙朋友們也許在言語溝通上不比其他人來得流暢或完整。但在藝術呈現上，有許多非常深刻的地方，值得我們一起思考及體會。所以我們也希望能透過這個小小的環節，來讓大家用多元的方法來呈現自己的想法。一位參與此次協作會議的家扶警官分享：「透過今天的共創及對談，我更了解了這群精障朋友。 我們在校園也辦理講座，若今天的形式，能夠帶入校園，我相信會讓大家更了解這個議題，解開長久以來的誤會。」
  
-<figure><img alt="image" src="/assets/imgs/c088f437986dd609b5c0c77641aa623d.jpg" /><img alt="image" src="/assets/imgs/38dfd9c5b17bf9d92373f14ad0393ea7.jpg.jpg" /><figcaption>協作會議中，警察、精障者、醫師、社工、媒體、藝術工作者、精障家屬等等多元的與會者，運用各式素材及故宮文物來介紹自己，嘗試消弭以往的衝突，與他人對話。
+<figure>
+<img alt="image" src="/assets/imgs/c088f437986dd609b5c0c77641aa623d.jpg" />
+<img alt="image" src="/assets/imgs/ae82b59c1bee68ee3887ae719ad028ae.jpg" width="50%" />
+<img alt="image" src="/assets/imgs/38dfd9c5b17bf9d92373f14ad0393ea7.jpg" width="50%" /><figcaption>協作會議中，警察、精障者、醫師、社工、媒體、藝術工作者、精障家屬等等多元的與會者，運用各式素材及故宮文物來介紹自己，嘗試消弭以往的衝突，與他人對話。
 </figcaption></figure>
  
  
@@ -67,8 +73,8 @@ tags:
  
  
  
-想了解更多：
-<a href="https://issuu.com/pdis.tw/docs/__________" target="_blank">故宮有精神案工作坊議題手冊</a>
-<a href="https://miro.com/app/board/o9J_kuGEpO0=/" target="_blank">故宮有精神案工作坊心智圖</a>
-<a href="https://sayit.pdis.nat.gov.tw/2020-07-08-%E9%96%8B%E6%94%BE%E6%94%BF%E5%BA%9C%E7%AC%AC66%E6%AC%A1%E8%AD%B0%E9%A1%8C%E5%8D%94%E4%BD%9C%E6%9C%83%E8%AD%B0" target="_blank">故宮有精神案工作坊逐字稿</a>
+### 想了解更多：
+- <a href="https://issuu.com/pdis.tw/docs/__________" target="_blank">故宮有精神案工作坊議題手冊</a>
+- <a href="https://miro.com/app/board/o9J_kuGEpO0=/" target="_blank">故宮有精神案工作坊心智圖</a>
+- <a href="https://sayit.pdis.nat.gov.tw/2020-07-08-%E9%96%8B%E6%94%BE%E6%94%BF%E5%BA%9C%E7%AC%AC66%E6%AC%A1%E8%AD%B0%E9%A1%8C%E5%8D%94%E4%BD%9C%E6%9C%83%E8%AD%B0l" target="_blank">故宮有精神案工作坊逐字稿</a>
 
