Change photo layout for `有精神`

--- a/_i18n/en/_posts/2020-09-21-「有精神」的協作會議.md
+++ b/_i18n/en/_posts/2020-09-21-「有精神」的協作會議.md
@@ -32,8 +32,8 @@ Everyone has more or less experience with mental disorders. Maybe she/he often w
 The Forbidden City has long been committed to museum cultural equality. Since 108, we have cooperated with Cifang Care Center to bring cultural relics into the care center and create together with members with mental disorders. In 109, we further planned the &quot;Enthusiastic&quot; exhibition, which included the cultural relics of the Palace Museum, artists, and people with mental disabilities. For the creation and interpretation of mental disorders. <a href="https://sayit.pdis.nat.gov.tw/2020-03-02-109%E5%B9%B43%E6%9C%88%E9%96%8B%E6%94%BE%E6%94%BF%E5%BA%9C%E8%81%AF%E7%B5%A1%E4%BA%BA%E5%B7%A5%E4%BD%9C%E6%8E%A8%E5%8B%95%E6%9C%83%E8%AD%B0#s379433" target="_blank">The government liaison person, Yi Wen, raised this topic to the monthly meeting of open government liaison persons in March 109</a> . It is planned to hold a collaborative meeting with the Public Digital Innovation Space (PDIS) of the Executive Yuan. It is hoped that the preparatory process will incorporate various opinions so that the public can have a clearer understanding of the &quot;Enlightened Exhibition&quot; and related issues. Through the open and transparent meeting mechanism and interactive workshops, more people who are concerned about this topic can also participate in discussions and express their views in another way. 
 
  <figure> 
- <img alt="image" src="/assets/imgs/f4410942538007e7cbad253765036cf1.jpg" width="50%" /> 
- <img alt="image" src="/assets/imgs/5935e8f8de18fb3ee89e39558023db7f.jpg" width="50%" /> 
+ <img alt="image" src="/assets/imgs/f4410942538007e7cbad253765036cf1.jpg" style="width: 49%; display: inline;" /> 
+ <img alt="image" src="/assets/imgs/5935e8f8de18fb3ee89e39558023db7f.jpg" style="width: 49%; display: inline;" /> 
  <figcaption> The Forbidden City uses different media and themes to lead members of Cifang to learn about cultural relics and express their creations. </figcaption></figure> 
  
  
@@ -48,8 +48,8 @@ The main axis clarified from the in-depth interview: &quot;Thinking about the di
  
  <figure> 
  <img alt="image" src="/assets/imgs/c088f437986dd609b5c0c77641aa623d.jpg" /> 
- <img alt="image" src="/assets/imgs/ae82b59c1bee68ee3887ae719ad028ae.jpg" width="50%" /> 
- <img alt="image" src="/assets/imgs/38dfd9c5b17bf9d92373f14ad0393ea7.jpg" width="50%" /><figcaption> In the collaborative meeting, diverse participants such as police, mentally handicapped, physicians, social workers, media, art workers, family members of the mentally handicapped, etc., used various materials and cultural relics of the Forbidden City to introduce themselves, try to eliminate past conflicts, and talk to others . 
+ <img alt="image" src="/assets/imgs/ae82b59c1bee68ee3887ae719ad028ae.jpg" style="width: 49%; display: inline;" /> 
+ <img alt="image" src="/assets/imgs/38dfd9c5b17bf9d92373f14ad0393ea7.jpg" style="width: 49%; display: inline;" /><figcaption> In the collaborative meeting, diverse participants such as police, mentally handicapped, physicians, social workers, media, art workers, family members of the mentally handicapped, etc., used various materials and cultural relics of the Forbidden City to introduce themselves, try to eliminate past conflicts, and talk to others . 
  </figcaption></figure> 
  
  
