--- a/_i18n/zh-TW/_posts/2020-09-21-「有精神」的協作會議.md
+++ b/_i18n/zh-TW/_posts/2020-09-21-「有精神」的協作會議.md
@@ -31,8 +31,8 @@ tags:
 故宮長期致力於博物館文化平權。從108年起與慈芳關懷中心合作，將文物帶入關懷中心與精神障礙會員共賞共創，109年更進一步策劃「有精神」展覽，展覽中涵括故宮文物，藝術家，精神障礙者相關於精神障礙議題的創作與詮釋。<a href="https://sayit.pdis.nat.gov.tw/2020-03-02-109%E5%B9%B43%E6%9C%88%E9%96%8B%E6%94%BE%E6%94%BF%E5%BA%9C%E8%81%AF%E7%B5%A1%E4%BA%BA%E5%B7%A5%E4%BD%9C%E6%8E%A8%E5%8B%95%E6%9C%83%E8%AD%B0#s379433" target="_blank">政府聯絡人逸文於109年3月將本議題自提至開放政府聯絡人月會</a>。計畫與行政院公共數位創新空間（PDIS）合作召開協作會議。希望籌備過程涵融多方意見，讓大眾能對「有精神展」及相關議題有更清晰的了解。透過開放透明的會議機制與互動式的工作坊，讓更多關心這個議題的人，也能用另一種方式參與討論，表達看法。
 
 <figure>
-<img alt="image" src="/assets/imgs/f4410942538007e7cbad253765036cf1.jpg" width="50%" />
-<img alt="image" src="/assets/imgs/5935e8f8de18fb3ee89e39558023db7f.jpg" width="50%" />
+<img alt="image" src="/assets/imgs/f4410942538007e7cbad253765036cf1.jpg" style="width: 49%; display: inline;" />
+<img alt="image" src="/assets/imgs/5935e8f8de18fb3ee89e39558023db7f.jpg" style="width: 49%; display: inline;" />
 <figcaption>故宮運用不同媒材與主題，帶領著慈芳會員認識文物，抒發創作。</figcaption></figure>
  
  
@@ -47,8 +47,8 @@ tags:
  
 <figure>
 <img alt="image" src="/assets/imgs/c088f437986dd609b5c0c77641aa623d.jpg" />
-<img alt="image" src="/assets/imgs/ae82b59c1bee68ee3887ae719ad028ae.jpg" width="50%" />
-<img alt="image" src="/assets/imgs/38dfd9c5b17bf9d92373f14ad0393ea7.jpg" width="50%" /><figcaption>協作會議中，警察、精障者、醫師、社工、媒體、藝術工作者、精障家屬等等多元的與會者，運用各式素材及故宮文物來介紹自己，嘗試消弭以往的衝突，與他人對話。
+<img alt="image" src="/assets/imgs/ae82b59c1bee68ee3887ae719ad028ae.jpg" style="width: 49%; display: inline;" />
+<img alt="image" src="/assets/imgs/38dfd9c5b17bf9d92373f14ad0393ea7.jpg" style="width: 49%; display: inline;" /><figcaption>協作會議中，警察、精障者、醫師、社工、媒體、藝術工作者、精障家屬等等多元的與會者，運用各式素材及故宮文物來介紹自己，嘗試消弭以往的衝突，與他人對話。
 </figcaption></figure>
  
  
