Fix link for `故宮有精神案工作坊逐字稿`

--- a/_i18n/en/_posts/2020-09-21-「有精神」的協作會議.md
+++ b/_i18n/en/_posts/2020-09-21-「有精神」的協作會議.md
@@ -77,5 +77,5 @@ The main axis clarified from the in-depth interview: &quot;Thinking about the di
 ### Want to know more:
 -The <a href="https://issuu.com/pdis.tw/docs/__________" target="_blank">Forbidden City&#39;s Spiritual Case Workshop Handbook</a> 
 -The <a href="https://miro.com/app/board/o9J_kuGEpO0=/" target="_blank">Forbidden City&#39;s Spiritual Case Workshop Mind Map</a> 
--The <a href="https://sayit.pdis.nat.gov.tw/2020-07-08-%E9%96%8B%E6%94%BE%E6%94%BF%E5%BA%9C%E7%AC%AC66%E6%AC%A1%E8%AD%B0%E9%A1%8C%E5%8D%94%E4%BD%9C%E6%9C%83%E8%AD%B0l" target="_blank">Forbidden City Spiritual Case Workshop Verbatim Draft</a> 
+-The <a href="https://sayit.pdis.nat.gov.tw/2020-07-08-%E9%96%8B%E6%94%BE%E6%94%BF%E5%BA%9C%E7%AC%AC66%E6%AC%A1%E8%AD%B0%E9%A1%8C%E5%8D%94%E4%BD%9C%E6%9C%83%E8%AD%B0" target="_blank">Forbidden City Spiritual Case Workshop Verbatim Draft</a> 
 
