--- a/_i18n/zh-TW/_posts/2020-09-21-「有精神」的協作會議.md
+++ b/_i18n/zh-TW/_posts/2020-09-21-「有精神」的協作會議.md
@@ -76,5 +76,5 @@ tags:
 ### 想了解更多：
 - <a href="https://issuu.com/pdis.tw/docs/__________" target="_blank">故宮有精神案工作坊議題手冊</a>
 - <a href="https://miro.com/app/board/o9J_kuGEpO0=/" target="_blank">故宮有精神案工作坊心智圖</a>
-- <a href="https://sayit.pdis.nat.gov.tw/2020-07-08-%E9%96%8B%E6%94%BE%E6%94%BF%E5%BA%9C%E7%AC%AC66%E6%AC%A1%E8%AD%B0%E9%A1%8C%E5%8D%94%E4%BD%9C%E6%9C%83%E8%AD%B0l" target="_blank">故宮有精神案工作坊逐字稿</a>
+- <a href="https://sayit.pdis.nat.gov.tw/2020-07-08-%E9%96%8B%E6%94%BE%E6%94%BF%E5%BA%9C%E7%AC%AC66%E6%AC%A1%E8%AD%B0%E9%A1%8C%E5%8D%94%E4%BD%9C%E6%9C%83%E8%AD%B0" target="_blank">故宮有精神案工作坊逐字稿</a>
 
