--- a/_posts/2020-09-21-「有精神」的協作會議.md
+++ b/_posts/2020-09-21-「有精神」的協作會議.md
@@ -28,7 +28,7 @@ tags:
  
  
 ## 背景介紹
-故宮長期致力於博物館文化平權。從108年起與慈芳關懷中心合作，將文物帶入關懷中心與精神障礙會員共賞共創，109年更進一步策劃「有精神」展覽，展覽中涵括故宮文物，藝術家，精神障礙者相關於精神障礙議題的創作與詮釋。<a href="https://sayit.pdis.nat.gov.tw/2020-03-02-109%E5%B9%B43%E6%9C%88%E9%96%8B%E6%94%BE%E6%94%BF%E5%BA%9C%E8%81%AF%E7%B5%A1%E4%BA%BA%E5%B7%A5%E4%BD%9C%E6%8E%A8%E5%8B%95%E6%9C%83%E8%AD%B0#s379433" target="_blank">政府聯絡人逸文於109年3月將本議題自提至開放政府聯絡人月會</a>。計畫與行政院公共數位創新空間（PDIS）合作召開協作會議。希望籌備過程涵融多方意見，讓大眾能對「有精神展」及相關議題有更清晰的了解。透過開放透明的會議機制與互動式的工作坊，讓更多關心這個議題的人，也能用另一種方式參與討論，表達看法。
+故宮長期致力於博物館文化平權。從108年起與慈芳關懷中心合作，將文物帶入關懷中心與精神障礙會員共賞共創，109年更進一步策劃「有精神」展覽，展覽中涵括故宮文物，藝術家，精神障礙者相關於精神障礙議題的創作與詮釋。故宮「開放政府聯絡人」<a href="https://sayit.pdis.nat.gov.tw/2020-03-02-109%E5%B9%B43%E6%9C%88%E9%96%8B%E6%94%BE%E6%94%BF%E5%BA%9C%E8%81%AF%E7%B5%A1%E4%BA%BA%E5%B7%A5%E4%BD%9C%E6%8E%A8%E5%8B%95%E6%9C%83%E8%AD%B0#s379433" target="_blank">逸文於109年3月將本議題自提至開放政府聯絡人月會</a>。計畫與行政院公共數位創新空間（PDIS）合作召開協作會議。希望籌備過程涵融多方意見，讓大眾能對「有精神展」及相關議題有更清晰的了解。透過開放透明的會議機制與互動式的工作坊，讓更多關心這個議題的人，也能用另一種方式參與討論，表達看法。
 
 <figure>
 <img alt="image" src="/assets/imgs/f4410942538007e7cbad253765036cf1.jpg" style="width: 49%; display: inline;" />
