--- a/_i18n/en/_posts/2020-09-24-健康氣象e起來-熱傷害風險不再.md
+++ b/_i18n/en/_posts/2020-09-24-健康氣象e起來-熱傷害風險不再.md
@@ -1,29 +1,28 @@
 ---
   layout: "post"
-  title: "Shang and Zhou Column: Healthy weather is rising, heat injury risk no longer"
-  excerpt: "The team believes that only by promoting the revision of regulations from the source can the prevention and control work be deepened."
+  title: "Health and Weather Tog-E-ther, heat injury risk no longer"
+  excerpt: "The team team believes that the only way to deepen prevention and treatment efforts is to push for regulatory improvement at the source."
   image: "/assets/imgs/c410479843f864ed0126c966b52b30e5e8a9c3c8.jpeg"
-  author: "唐鳳、彭筱婷"
+  author: "Audrey Tang, Sheau-Tyng Peng"
   category: "blog"
   tags: 
-    - "社會創新"
+    - "Social Innovation"
 ---
 
+🌞 According to the Ministry of Health and Welfare (MOHW), the number of emergency room visits for heat-related illnesses such as heat stroke and heat cramps in August this year hit a three-year high, up nearly 40% from the same period last year. Improper management can even lead to organ failure with a mortality rate of over 30%.
 
-🌞 According to statistics from the Ministry of Health and Welfare, the number of visits to the emergency department due to "heat injury" such as heatstroke and heat cramps in August this year hit a new high in the past three years, an increase of nearly 40% over the same period last year. If not handled properly, it can even lead to organ failure, with a mortality rate of over 30%. 
+🌡️ Under extreme climates, heat illnesses have become a global health concern. Professor Long Shihjyun, a long-time researcher on this issue, analyzed data from the Central Weather Bureau and the National Health Insurance Research Database from 2000 to 2014, and pointed out in a journal paper published in 2019 that temperature alone is not an accurate indicator of heat illnesses. For better measures of the influence of heat, the wet-bulb globe temperature (WBGT), which takes temperature, humidity, solar radiation and wind speed, must be introduced.
 
-🌡️ In extreme climates, heat injury has become a health issue of global concern. Professor Long Shijun, who has been studying this topic for a long time, analyzed the data of the Taiwan Meteorological Bureau and the National Health Insurance Database from 2000 to 2014. The journal article published in 2019 pointed out that temperature alone is not accurate. If you want to know the impact of heat damage , It is necessary to calculate the "Integrated Temperature Thermal Index (WBGT, Wet Bulb Globe Temperature)" of temperature, humidity, solar radiation and wind speed. 
+📲 Earlier this year, Prof. Long, together with the Central Weather Bureau and the Health Promotion Administration, signed up for the "Presidential Hackathon" to develop Taiwan's first weather alert platform for healthcare, "Health Weather Tog-E-ther", which allows users to see their health risks by simply opening the "Tog-E-ther" app.
 
-📲 Earlier this year, Professor Long, together with the Bureau of Meteorology and the National Health Administration, signed up for the "President Cup Hackathon" to develop the nation’s first healthy weather warning platform-"Healthy Weather E-Up". Users only need to open "e Get up” app, you can see the personal health risks. 
+👴 For example, Mr. Lin, 65, works out every day, but he has high blood pressure and diabetes, which puts him at high risk for heat illnesses. All he has to do is to enter his health information into "Tog-E-ther", and the app will show notifications on his phone based on the weather conditions of the day, reminding him to avoid heat-related illnesses and outdoor exercises from 11 a.m. to 2 p.m.
 
-👴 For example, Mr. Lin, 65, has the habit of going out for exercise every day, but he suffers from high blood pressure and diabetes, which is a high risk group for heat injury. As long as he enters his health information into "e-up", the app will push notifications on his mobile phone according to the weather of the day, reminding him to prevent heat injuries from 11 am to 2 pm, and try not to go out for exercise. 
+💡 This user-friendly design is the result of the team's brainstorming. Professor Long had never participated in hackathons before. During the discussions, she found that everyone saw themselves as 'users', actively exploring potential users' needs for innovative application of health and meteorological data. This is something that has rarely happened in the past in public sector policy discussions.
 
-💡 This close-to-life design is derived from the brainstorming of the team. Professor Long has never participated in a hackathon in the past. During the discussion, she found that everyone regarded themselves as "users" and actively explored the needs of potential users for innovative applications of health and weather data. This is something that rarely happened when the public sector discussed policies in the past. 
+🚸 During the brainstorming, Prof. Long also shared her research on heat illnesses in different groups of people, such as workers, farmers, and joggers, with the team. In this regard, the "Tog-E-ther" team believes that the only way to deepen prevention and treatment efforts is to push for regulatory improvement at the source.
 
-🚸 During the brainstorming process, Professor Long also shared her research on heat injury of different ethnic groups, such as laborers, farmers, and joggers. In this regard, the "e-up" team believes that only by promoting the revision of regulations from the source can the prevention and control work be deepened. 
+🔊 Therefore, within a month, the team discussed with the Occupational Safety and Health Administration of the Ministry of Labor, the National Fire Agency, the Construction and Planning Agency, and the Sports Administration of the Ministry of Education, and received enthusiastic responses — with numerous regulatory amendments such as the Occupational Safety and Health Education and Training Rules — breaking through the administrative barriers in the past. The Council of Agriculture also actively used apps such as "Field Helpers" and "Agriculture e-Grip" to tandem with the "Tog-E-ther" dataset and instantly broadcast it to tens of thousands of farmers.
 
-🔊 Therefore, the team has discussed and discussed with various ministries such as the Ministry of Labor's Occupational Safety Administration, the Ministry of Internal Affairs Fire Department, the Construction Department, the Ministry of Education Sports Department, etc., and received enthusiastic responses to promote the "Occupational Safety and Health Education and Training Rules" When the laws are revised, the administrative obstacles in the past have been broken. The Council of Agriculture has taken the initiative to connect apps such as "Tianbian Good Helper" and "Agricultural E-Patch" to the "e-up" data collection, and broadcast to tens of thousands of farmers' friends in real time. 
+☃ Recently, "Tog-E-ther" was selected as one of the outstanding teams of the Presidential Hackathon. It is expected that at least 13 million people will benefit from the platform when it is officially launched at the end of the year. The team is also discussing the adoption of another health issue caused by extreme climate change, "cold illnesses", as the next phase of implementation.
 
-☃ A few days ago, "Healthy Weather E-Up" was selected as one of the outstanding teams of the Presidents Cup Hackathon. After the platform is officially launched at the end of the year, it is expected to benefit at least 13 million people. The team is also discussing and including another health issue caused by extreme weather-"cold injury" as the next stage of implementation goals. 
-
-🌏 I think that "e-up" uses the unique global health insurance database, combined with solid local meteorological research, not only actively connects the existing promotion applications of various departments, and successfully promotes regulatory amendments, but also allows us to see As the cornerstone of social innovation, academic foundation is indeed the best model of "serving the people together." 
+🌏 In my opinion, with our world's-first health insurance database and solid local weather research, "Tog-E-ther" has not only actively linked up with the existing promotion applications of various departments, but also successfully pushed for the amendment of regulations, showing us that academic foundation is the cornerstone of social innovation, which is indeed the best model of serving the public together.
